--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Jak zacząć programować TS</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <div class="container">
-            <h1>TO DO LIST</h1>
-            <form autocomplete="off">
-                <label for="name">Add new task:</label>
-                <input type="text" id="name" />
-                <ul class="categories">
-                </ul>
-                <button>Add</button>
-            </form>
-            <h2>All the tasks:</h2>
-            <ul class="tasks"></ul>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jak zacząć programować TS</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>TO DO LIST</h1>
+      <form autocomplete="off">
+        <label for="name">Add new task:</label>
+        <input type="text" id="name" />
+        <ul class="categories"></ul>
+        <button>Add</button>
+      </form>
+      <h2>All the tasks:</h2>
+      <ul class="tasks"></ul>
+    </div>
 
-        <script type="module" src="dist/app.js"></script>
-    </body>
+    <script type="module" src="dist/app.js"></script>
+  </body>
 </html>
